<resources>
    <string name="app_name">Nutri-A</string>
    <string name="title_home">Home</string>
    <string name="title_recommend_food">Recommend Meals</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_recommend_recipes">Choose the ingredients</string>
    <string name="title_search_calories">Search Calories</string>
    <string name="title_profile">Profile</string>
    <string name="title_calculate_nutrition">Calculator Nutrition</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_result_calories">Result Nutrition!</string>
    <string name="title_result_food">Result Calories!</string>
    <string name="title_detail_recipes">Detail Recipes</string>
    <string name="title_result_recipes">Result Predict Recipes</string>
    <string name="title_setting">Settings</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="email_warning">Please use email format</string>
    <string name="password_warning">Password must have at least 6 characters</string>
    <string name="name_warning">Name cannot be empty</string>
    <string name="field_warning">Field cannot be empty</string>
    <string name="email_null">Password cannot be empty</string>
    <string name="password_null">Password cannot be empty</string>
    <string name="account_question">Don\'t have an account ?</string>
    <string name="text_save">Save</string>
    <string name="text_register">Register</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_date_of_birth">Date of Birth</string>
    <string name="text_weight">Weight</string>
    <string name="text_height">Height</string>
    <string name="text_exercise_week">How many times do you exercise in a week</string>
    <string name="title_calories_needs">Calculate Your Daily Calories!</string>
    <string name="text_age">Age</string>
    <string name="text_gender">Gender</string>
    <string name="title_greetings">Welcome,</string>
    <string name="text_calculator_nutrition">Nutrition Calculator</string>
    <string name="text_desc_calculator_nutrition">Calculate your daily nutrition using this calculator!</string>
    <string name="text_daily_food">Daily Meal</string>
    <string name="text_desc_daily_food">Daily food recommendations that match your nutrition!</string>
    <string name="text_recipe_recommendations">Recipe Recommendations</string>
    <string name="text_desc_recipe_recommendations">Limited ingredients in the fridge? Look for recipe recommendations here!</string>
    <string name="text_language">Language</string>
    <string name="text_security_policy">Security Policy</string>
    <string name="text_faq">FAQ</string>
    <string name="text_about">About</string>
    <string name="text_logout">Logout</string>
    <string name="prompt_recommend_meals">Let\'s look for Meals Recommendations according to Your Nutritional Needs!</string>
    <string name="text_recommend_food">Recommendation meals for me</string>
    <string name="prompt_food_recommend">Meals recommendations for you</string>
    <string name="text_use_my_data">Use my data</string>
    <string name="text_morning">Morning</string>
    <string name="text_afternoon">Afternoon</string>
    <string name="text_night">Night</string>
    <string name="title_nutrition_needs">Your Daily Nutrition Needs</string>
    <string name="text_calculate_your_nutrition">Calculate Your Nutrition</string>
    <string name="text_ingredients_1">Ingredients 1</string>
    <string name="text_ingredients_2">Ingredients 2</string>
    <string name="text_ingredients_3">Ingredients 3</string>
    <string name="text_ingredients_4">Ingredients 4</string>
    <string name="text_ingredients_5">Ingredients 5</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="calories">Calories</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="directions">Directions</string>
    <string name="description">Description</string>
    <string name="search_calories">Search Calories</string>
    <string name="image_preview">Image Preview</string>
    <string name="food_name">Food Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="text_search">Search</string>
    <string name="text_calories">Calories</string>
    <string name="text_fat">Fat</string>
    <string name="text_protein">Protein</string>
    <string name="text_carbohydrate">Carbohydrate</string>
    <string name="text_detail">Detail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login Failed</string>
    <string name="upload_warning">Content cannot be empty</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="upload_success">Upload Success</string>
    <string name="register_success">Registration Success!</string>
    <string name="register_fail">Registration Failed!</string>
    <string name="cannot_predict_picture">Cannot predict the Picture. Please take another picture</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="logout_success">Logout Success</string>
    <string name="calculate_success">Success Calculate Nutrition</string>
    <string name="calculate_failed">Failed to Calculate Nutrition</string>
    <string name="failed_get_data_user">Failed to Get Data User</string>
    <string name="success_get_data_user">Success to Get Data User</string>
    <string name="edit_profile_success">Success to Edit Profile</string>
    <string name="edit_profile_failed">Failed to Edit Profile</string>
    <string name="success_predict_picture">Success to Predict Picture</string>
    <string name="success_calculate_food">Success to Calculate Meals</string>
    <string name="success_calculate_recipes">Success to Calculate Recipes</string>
    <string name="failed_calculate_food">Failed to Calculate Meals</string>
    <string name="email_not_registered">Email is not registered</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="try_again">Try Again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="failed_take_picture">Failed to take picture</string>
    <string name="failed_show_camera">Failed to show camera</string>
    <string name="value_carbohydrate">114.19 gr</string>
    <string name="value_fat">1.54 gr</string>
    <string name="value_protein">6.04 gr</string>
    <string name="value_calories">197 kcl</string>
    <string name="value_name">Jane Doe</string>
    <string name="value_gender">Perempuan</string>
    <string name="value_height">168.0 cm</string>
    <string name="value_weight">45.0 kg</string>
    <string name="value_calories_need">1500 Kal</string>
    <string name="value_carbohydrate_needs">225 gr</string>
    <string name="value_protein_needs">57 gr</string>
    <string name="value_fat_needs">25 gr</string>
    <string name="ingredients_rule">Ingredients must have at least 2</string>
    <string name="team_name">Bangkit 2022 C22-PS014 Product Capstone</string>
    <string name="nutria_tagline">Nutri-A [Cek Nutrisi Hanya Seujung Jari]</string>
    <string name="nutria_description">Our project name is nutri-A with tagline \'cek nutrisi hanya seujung jari\', in this application we have 3 main features which are :</string>
    <string name="list_space">-</string>
    <string name="food_image_about">Food image classification and give nutrient information which are fat, protein, carbo and also energy/calories (in this feature we use deep learning).</string>
    <string name="meal_about">Meal recommendation , so we scrape data from panganku.org and we search an optimum combination of meal for nutrient that user need (we use genetic algorithm).</string>
    <string name="recipes_about">Recipe recommendation, we scrape data from fatsecret.co.id and recommend recipe based on ingredients that user input and give nutrient information as well (we use closest distance).</string>
    <string name="our_team">Our Team</string>
    <string name="zico_name">Zicola Vladimir Viky Khan</string>
    <string name="ml">Machine Learning</string>
    <string name="victor_name">Victorio Valendion</string>
    <string name="zayin_name">Zayyinah Zannuba Arifah Chofsoh</string>
    <string name="fauzan_name">Fauzan Nursalma Mawardi</string>
    <string name="md">Mobile Development</string>
    <string name="yanuar_name">Yanuar Andi Rahman</string>
    <string name="chaira_name">Chaira Qalbyassalam</string>
    <string name="cc">Cloud Computing</string>
    <string name="text_logo">Nutri-A</string>
    <string name="title_faq">FAQ</string>
</resources>